--- a/overview/topologie-grundlagen-overview.tex
+++ b/overview/topologie-grundlagen-overview.tex
@@ -14,7 +14,7 @@ Begriffe, die in dieser Übersicht definiert sind, sind \textit{kursiv} gesetzt.
 
 % \paragraph{Topologie:} Mengensystem, das die leere und die gesamte Menge enthält und abgeschlossen ist unter Vereinigung und endlichem Schnitt (\ref{def:top})
 % 
-% \paragraph{topologischer Raum:} Paar aus einer Grundmenge und einer \textit{Topologie} (\ref{def:top})
+% \paragraph{topologischer Raum:} Paar aus einer Grundmenge und einer \textit{Topologie} (Def. \ref{tg_def:top})
 % 
 % \paragraph{offene Menge:} Element einer \textit{Topologie} (\ref{def:top})
 % 
@@ -87,55 +87,55 @@ Begriffe, die in dieser Übersicht definiert sind, sind \textit{kursiv} gesetzt.
 
 \section*{Begriffe}
 
-    \paragraph{abgeschlossene Menge:} Komplement einer \textit{offenen Menge} (\ref{def:CX})
+    \paragraph{abgeschlossene Menge:} Komplement einer \textit{offenen Menge} (Def. \ref{tg_def:CX})
 
-    \paragraph{Abschluss einer Menge:} Menge inklusive ihrer \textit{Randpunkte} (\ref{def:cl})
+    \paragraph{Abschluss einer Menge:} Menge inklusive ihrer \textit{Randpunkte} (Def. \ref{tg_def:abschl})
 
-    \paragraph{Abschlussoperator:} Operator, der jeder Menge ihren \textit{Abschluss} zuordnet (\ref{def:cl})
+    \paragraph{Abschlussoperator:} Operator, der jeder Menge ihren \textit{Abschluss} zuordnet (Def. \ref{tg_def:abschl})
     
     \paragraph{Abstand:} das, was eine \textit{Metrik} misst
     
-    \paragraph{Dreiecksungleichung:} $f(x,y) + f(y,z) \geq f(x,z)$ (\ref{def:metr})
+    \paragraph{Dreiecksungleichung:} $f(x,y) + f(y,z) \geq f(x,z)$ (Def. \ref{tg_def:metr})
 
-    \paragraph{Häufungspunkt einer Menge:} Punkt für den in jeder \textit{Umgebung} andere Punkte aus der Menge liegen (\ref{def:hp})
+    \paragraph{Häufungspunkt einer Menge:} Punkt für den in jeder \textit{Umgebung} andere Punkte aus der Menge liegen (Def. \ref{tg_def:hp})
     
-    \paragraph{induzierte Topologie:} \textit{Topologie} auf einem \textit{metrischen Raum} in der Punkte \textit{innere} Punkte einer Menge sind, wenn sie eine \textit{$\varepsilon$-Umgebung} haben, die ganz in der Menge liegt (\ref{def:topMet})
+    \paragraph{induzierte Topologie:} \textit{Topologie} auf einem \textit{metrischen Raum} in der Punkte \textit{innere} Punkte einer Menge sind, wenn sie eine \textit{$\varepsilon$-Umgebung} haben, die ganz in der Menge liegt (Def. \ref{tg_def:topMet})
 
     \paragraph{Inneres einer Menge:} \textit{Kern} der Menge
 
-    \paragraph{Kern eine Menge:} Menge ohne ihre \textit{Randpunkte} (\ref{def:op})
+    \paragraph{Kern eine Menge:} Menge ohne ihre \textit{Randpunkte} (Def. \ref{tg_def:kern})
 
-    \paragraph{Kernoperator:} Operator, der jeder Menge ihren \textit{Kern} zuordnet (\ref{def:op})
+    \paragraph{Kernoperator:} Operator, der jeder Menge ihren \textit{Kern} zuordnet (Def. \ref{tg_def:kern})
 
-    \paragraph{offene Menge:} Element einer \textit{Topologie} (\ref{def:top})
+    \paragraph{offene Menge:} Element einer \textit{Topologie} (Def. \ref{tg_def:top})
     
-    \paragraph{Metrik:} Abbildung, die je zwei Punkten ihren Abstand zuordnet. Sie muss \textit{positiv definit} und \textit{symmetrisch} sein und die \textit{Dreiecksungleichung} erfüllen. (\ref{def:metr})
+    \paragraph{Metrik:} Abbildung, die je zwei Punkten ihren Abstand zuordnet. Sie muss \textit{positiv definit} und \textit{symmetrisch} sein und die \textit{Dreiecksungleichung} erfüllen. (Def. \ref{tg_def:metr})
     
-    \paragraph{metrischer Raum:} Menge mit einer \textit{Metrik} (\ref{def:metr})
+    \paragraph{metrischer Raum:} Menge mit einer \textit{Metrik} (Def. \ref{tg_def:metr})
 
-    \paragraph{offene Umgebung eines Punktes:} \textit{offene Menge}, die den Punkt enthält (\ref{def:umg})
+    \paragraph{offene Umgebung eines Punktes:} \textit{offene Menge}, die den Punkt enthält (Def. \ref{tg_def:umg})
     
-    \paragraph{positive Definitheit:} Im Kontext von Metriken ist eine Abbildung $f:X \times X \to \R$ positiv definit, wenn für alle $x,y \in X$ gilt: $f(x,y) \geq 0$ und $f(x,y) = 0 \ \Leftrightarrow \ x = y$. (\ref{def:metr})
+    \paragraph{positive Definitheit:} Im Kontext von Metriken ist eine Abbildung $f:X \times X \to \R$ positiv definit, wenn für alle $x,y \in X$ gilt: $f(x,y) \geq 0$ und $f(x,y) = 0 \ \Leftrightarrow \ x = y$. (Def. \ref{tg_def:metr})
 
-    \paragraph{Rand einer Menge:} Menge der \textit{Randpunkte} der Menge (\ref{def:rand})
+    \paragraph{Rand einer Menge:} Menge der \textit{Randpunkte} der Menge (Def. \ref{tg_def:rand})
 
-    \paragraph{Randoperator:} Operator, der jeder Menge ihren \textit{Rand} zuordnet (\ref{def:rand})
+    \paragraph{Randoperator:} Operator, der jeder Menge ihren \textit{Rand} zuordnet (Def. \ref{tg_def:rand})
 
-    \paragraph{Randpunkt einer Menge:} Punkt, für den jede \textit{Umgebung} sowohl Punkte enthält, die in der Menge liegen als auch Punkte, die nicht in ihr liegen (\ref{def:rand})
+    \paragraph{Randpunkt einer Menge:} Punkt, für den jede \textit{Umgebung} sowohl Punkte enthält, die in der Menge liegen als auch Punkte, die nicht in ihr liegen (Def. \ref{tg_def:rand})
     
-    \paragraph{Standardmetrik:} \textit{Metrik} auf $\R^n$, bei der zwei Punkte $(x_1, ... , x_n)$ und $(y_1, ... y_n)$ den \textit{Abstand} $\sqrt{(x_1-y_1)^2 + ... + (x_n - y_n)^2}$ haben (\ref{def:standardmetrik})
+    \paragraph{Standardmetrik:} \textit{Metrik} auf $\R^n$, bei der zwei Punkte $(x_1, ... , x_n)$ und $(y_1, ... y_n)$ den \textit{Abstand} $\sqrt{(x_1-y_1)^2 + ... + (x_n - y_n)^2}$ haben (Def. \ref{tg_def:standardmetrik})
 
-    \paragraph{stetige Abbildung:} Abbildung zwischen \textit{topologischen Räumen}, für die Urbilder \textit{offener Mengen} \textit{offen} sind (\ref{def:stetig})
+    \paragraph{stetige Abbildung:} Abbildung zwischen \textit{topologischen Räumen}, für die Urbilder \textit{offener Mengen} \textit{offen} sind (Def. \ref{tg_def:stetig})
     
-    \paragraph{Symmetrie:} Eine Abbildung $f:X^2 \to Y$ ist symmetrisch, wenn für alle $x,y \in X$ gilt: $f(x,y) = f(y,x)$. (\ref{def:metr})
+    \paragraph{Symmetrie:} Eine Abbildung $f:X^2 \to Y$ ist symmetrisch, wenn für alle $x,y \in X$ gilt: $f(x,y) = f(y,x)$. (Def. \ref{tg_def:metr})
     
-    \paragraph{Teilraumtopologie:} \textit{Topologie} auf einer Teilmenge eines \textit{topologischen Raumes} $X$, bei der die \textit{offenen Mengen} durch Schnitte mit \textit{offenen Mengen} aus $X$ entstehen (\ref{def:trTop})
+    \paragraph{Teilraumtopologie:} \textit{Topologie} auf einer Teilmenge eines \textit{topologischen Raumes} $X$, bei der die \textit{offenen Mengen} durch Schnitte mit \textit{offenen Mengen} aus $X$ entstehen (Def. \ref{tg_def:trTop})
 
-    \paragraph{Topologie:} Mengensystem, das die leere und die gesamte Menge enthält und abgeschlossen ist unter Vereinigung und endlichem Schnitt (\ref{def:top})
+    \paragraph{Topologie:} Mengensystem, das die leere und die gesamte Menge enthält und abgeschlossen ist unter Vereinigung und endlichem Schnitt (Def. \ref{tg_def:top})
 
-    \paragraph{topologischer Raum:} Paar aus einer Grundmenge und einer \textit{Topologie} (\ref{def:top})
+    \paragraph{topologischer Raum:} Paar aus einer Grundmenge und einer \textit{Topologie} (Def. \ref{tg_def:top})
     
-    \paragraph{$\boldsymbol{\varepsilon}$-Umgebung eines Punktes:} Menge der Punkte in einem \textit{metrischen Raum}, die von dem Punkt einen kleineren \textit{Abstand} als $\varepsilon$ haben (\ref{def:eps-umg})
+    \paragraph{$\boldsymbol{\varepsilon}$-Umgebung eines Punktes:} Menge der Punkte in einem \textit{metrischen Raum}, die von dem Punkt einen kleineren \textit{Abstand} als $\varepsilon$ haben (Def. \ref{tg_def:eps-umg})
 
 \section*{Symbole}
 
@@ -144,23 +144,23 @@ Begriffe, die in dieser Übersicht definiert sind, sind \textit{kursiv} gesetzt.
     
     \paragraph{$\ball_\varepsilon(p)$} - \quad \textit{$\varepsilon$-Umgebung} von $p$
 
-    \paragraph{$\abg_X$} - \quad Menge der in $X$ \textit{abgeschlossenen Mengen} (\ref{def:CX})
+    \paragraph{$\abg_X$} - \quad Menge der in $X$ \textit{abgeschlossenen Mengen} (Def. \ref{tg_def:CX})
 
-    \paragraph{$\cl_X$} - \quad \textit{Abschlussoperator} auf $X$ (\ref{def:cl})
+    \paragraph{$\cl_X$} - \quad \textit{Abschlussoperator} auf $X$ (Def. \ref{tg_def:abschl})
 
-    \paragraph{$d$} - \quad \textit{Standardmetrik} auf $\R^3$ (\ref{konv:d3})
+    \paragraph{$d$} - \quad \textit{Standardmetrik} auf $\R^3$ (Konv. \ref{tg_konv:d3})
     
-    \paragraph{$d_n$} - \quad \textit{Standardmetrik} auf $\R^n$ (\ref{def:standardmetrik})
+    \paragraph{$d_n$} - \quad \textit{Standardmetrik} auf $\R^n$ (Def. \ref{tg_def:standardmetrik})
     
-    \paragraph{$\rand_X$} - \quad \textit{Randoperator} auf $X$ (\ref{def:rand})
+    \paragraph{$\rand_X$} - \quad \textit{Randoperator} auf $X$ (Def. \ref{tg_def:rand})
 
-    \paragraph{$\HP_X(A)$} - \quad Menge der \textit{Häufungspunkte} von $A$ in $X$ (\ref{def:hp})
+    \paragraph{$\HP_X(A)$} - \quad Menge der \textit{Häufungspunkte} von $A$ in $X$ (Def. \ref{tg_def:hp})
  
-    \paragraph{$\offen_X$} - \quad \textit{Topologie} auf $X$ (\ref{konv:top}, \ref{def:trTop}, \ref{def:topMet})
+    \paragraph{$\offen_X$} - \quad \textit{Topologie} auf $X$ (Konv. \ref{tg_konv:top}, Def. \ref{tg_def:trTop}, Def. \ref{tg_def:topMet})
 
-    \paragraph{$\offen_X(p)$} - \quad Menge der \textit{offenen Umgebungen} von $p$ in $X$ (\ref{def:umg})
+    \paragraph{$\offen_X(p)$} - \quad Menge der \textit{offenen Umgebungen} von $p$ in $X$ (Def. \ref{tg_def:umg})
 
-    \paragraph{$\op_X$} - \quad \textit{Kernoperator} auf $X$ (\ref{def:op})
+    \paragraph{$\op_X$} - \quad \textit{Kernoperator} auf $X$ (Def. \ref{tg_def:kern})
 
 
 
@@ -193,7 +193,7 @@ Begriffe, die in dieser Übersicht definiert sind, sind \textit{kursiv} gesetzt.
 %     {def:cl}
 %         Anschlussoperator $\cl_X(A)$
 %         
-%     {def:op}
+%     {tg_def:kern}
 %         Kernoperator $\op_X(A)$
 %         Kern/Inneres
 %         
