--- a/thesis/thesis.tex
+++ b/thesis/thesis.tex
@@ -39,6 +39,8 @@
 \pagenumbering{roman}
 \pagestyle{plain}
 
+\addtocontents{toc}{\protect\setcounter{tocdepth}{1}} % Tiefe des Inhaltsverzeichnisses: section
+
 
 %********************************************************************
 % Frontmatter
