completet references in topologie-erweiterung-overview (tex/pdf)

--- a/overview/topologie-erweiterung-overview.tex
+++ b/overview/topologie-erweiterung-overview.tex
@@ -12,7 +12,7 @@ Begriffe, die in dieser Übersicht definiert sind, sind \textit{kursiv} gesetzt,
 
     \paragraph{Abgeschlossenes Inneres eine Menge:} \textsc{Abschluss} ihres \textsc{Kerns} (Def. \ref{te_def:cooc})
     
-    \paragraph{Äußerer Rand einer Menge:} Ist $A$ eine \textit{einfach offene} Menge und $B$ eine \textit{einfach offen} Menge auf dem \textsc{Rand} von $A$, so ist $p$ ein \textit{äußerer Randpunkt} von $B$, wenn er für jede andere \textit{einfache} Menge $A'$, für die $B$ \textit{einfach offen} auf dem \textsc{Rand} von $A'$ ist auch in der \textsc{Teilraumtopologie} von $\rand A'$ \textsc{Randpunkt} von $B$ wäre. (Def. Def. \ref{te_def:aeusserer-rand})
+    \paragraph{Äußerer Rand einer Menge:} Ist $A$ eine \textit{einfach offene} Menge und $B$ eine \textit{einfach offen} Menge auf dem \textsc{Rand} von $A$, so ist $p$ ein \textit{äußerer Randpunkt} von $B$, wenn er für jede andere \textit{einfache} Menge $A'$, für die $B$ \textit{einfach offen} auf dem \textsc{Rand} von $A'$ ist auch in der \textsc{Teilraumtopologie} von $\rand A'$ \textsc{Randpunkt} von $B$ wäre. (Def. \ref{te_def:aeusserer-rand})
     
     \paragraph{Äußerer Rand zweiter Stufe:} Ist $A$ eine \textit{einfach offene} Menge und $B$ eine \textit{einfach offene} Menge auf dem \textsc{Rand} von $A$, $C$ eine \textit{einfach offene} Menge auf dem \textsc{Rand} von $B$, so ist $p$ ein \textit{äußerer Randpunkt zweiter Stufe} von $C$, wenn er für jede andere \textit{einfach offene} Menge $A'$ und für jede andere auf dem \textsc{Rand} von $A'$ \textit{einfach offene} Menge $B'$, für die $C$ \textit{einfach offen} auf dem \textsc{Rand} von $B'$ ist auch in der \textsc{Teilraumtopologie} von $\rand B'$ \textsc{Randpunkt} von $C$ wäre.  (Def. \ref{te_def:aeusserer-rand-2})
 
