completed references in topologie-grundlagen-overview (tex/pdf)

--- a/overview/topologie-grundlagen-overview.tex
+++ b/overview/topologie-grundlagen-overview.tex
@@ -44,7 +44,7 @@ Begriffe, die in dieser Übersicht definiert sind, sind \textit{kursiv} gesetzt.
 % 
 % \paragraph{Kern eine Menge:} Menge ohne ihre Randpunkte (\ref{def:kern})
 % 
-% \paragraph{Inneres einer Menge:} Kern der Menge
+% \paragraph{Inneres einer Menge:} Kern der Menge (\ref{def:kern})
 % 
 % \paragraph{Kernoperator:} Operator, der jeder Menge ihren Kern zuordnet (\ref{def:kern})
 % 
@@ -101,7 +101,7 @@ Begriffe, die in dieser Übersicht definiert sind, sind \textit{kursiv} gesetzt.
     
     \paragraph{induzierte Topologie:} \textit{Topologie} auf einem \textit{metrischen Raum} in der Punkte \textit{innere} Punkte einer Menge sind, wenn sie eine \textit{$\varepsilon$-Umgebung} haben, die ganz in der Menge liegt (Def. \ref{tg_def:topMet})
 
-    \paragraph{Inneres einer Menge:} \textit{Kern} der Menge (\ref{def:kern})
+    \paragraph{Inneres einer Menge:} \textit{Kern} der Menge (Def. \ref{tg_def:kern})
 
     \paragraph{Kern eine Menge:} Menge ohne ihre \textit{Randpunkte} (Def. \ref{tg_def:kern})
 
@@ -148,7 +148,7 @@ Begriffe, die in dieser Übersicht definiert sind, sind \textit{kursiv} gesetzt.
 
     \paragraph{$\cl_X$} - \quad \textit{Abschlussoperator} auf $X$ (Def. \ref{tg_def:abschl})
 
-    \paragraph{$d$} - \quad \textit{Standardmetrik} auf $\R^3$ (Konv. \ref{tg_konv:d3})
+    \paragraph{$d$} - \quad \textit{Standardmetrik} auf $\R^3$ (Konvention \ref{tg_konv:d3})
     
     \paragraph{$d_n$} - \quad \textit{Standardmetrik} auf $\R^n$ (Def. \ref{tg_def:standardmetrik})
     
@@ -156,7 +156,7 @@ Begriffe, die in dieser Übersicht definiert sind, sind \textit{kursiv} gesetzt.
 
     \paragraph{$\HP_X(A)$} - \quad Menge der \textit{Häufungspunkte} von $A$ in $X$ (Def. \ref{tg_def:hp})
  
-    \paragraph{$\offen_X$} - \quad \textit{Topologie} auf $X$ (Konv. \ref{tg_konv:top}, Def. \ref{tg_def:trTop}, Def. \ref{tg_def:topMet})
+    \paragraph{$\offen_X$} - \quad \textit{Topologie} auf $X$ (Konvention \ref{tg_konv:top}, Def. \ref{tg_def:trTop}, Def. \ref{tg_def:topMet})
 
     \paragraph{$\offen_X(p)$} - \quad Menge der \textit{offenen Umgebungen} von $p$ in $X$ (Def. \ref{tg_def:umg})
 
