fixed typo in headline

--- a/overview/bso-overview.tex
+++ b/overview/bso-overview.tex
@@ -1,7 +1,7 @@
 \include{preamble-overview}
 
-\newcommand{\overviewnumber}{1}
-\newcommand{\overviewname}{$\theoryBS$}
+\newcommand{\overviewnumber}{2}
+\newcommand{\overviewname}{$\theoryBSO$}
 
 \begin{document}
 
