--- a/thesis/FrontBackmatter/Acknowledgments.tex
+++ b/thesis/FrontBackmatter/Acknowledgments.tex
@@ -4,8 +4,8 @@
 \pdfbookmark[1]{Danksagung}{acknowledgments}
 
 \begin{flushright}{\slshape
-    Jede Aufgabe benötigt doppelt so viel Zeit wie Sie ansetzen. Verdoppeln Sie die Zeit, dauert die Aufgabe viermal so lang. } \\ \medskip
-    \textcolor{darkgray}{---~~Rick Cook~~---}
+    Jede Aufgabe benötigt doppelt so viel Zeit wie Sie ansetzen. Verdoppeln Sie die Zeit, dauert die Aufgabe viermal so lang. }% \\ \medskip
+    %\textcolor{darkgray}{---~~Rick Cook~~---}
 \end{flushright}
 
 
