--- a/thesis/beweise/bew-bso-struktur.tex
+++ b/thesis/beweise/bew-bso-struktur.tex
@@ -1,6 +1,6 @@
 \section{Zu Kapitel \ref{chap:bso-struktur} (Formale Definition der \strukt)}
 
-\addtocontents{toc}{\protect\setcounter{tocdepth}{0}} % Folgende sections und subsections sollen nicht im Inhaltsverzeichnis erscheinen
+%\addtocontents{toc}{\protect\setcounter{tocdepth}{0}} % Folgende sections und subsections sollen nicht im Inhaltsverzeichnis erscheinen
 
 \subsection{Zu Abschnitt \ref{sec:analyse}}
 
@@ -35,4 +35,4 @@ Für niederdimensionale Raumentitäten sei hier beispielhaft der Beweis für 2-d
     9,17,18 & $\deshalb$ & 18. & $\lightning$
 \end{longtable}	
 
-\addtocontents{toc}{\protect\setcounter{tocdepth}{2}} % Ab hier geht das iInhaltsverzeichnis wieder bis Tiefe subsection
+%\addtocontents{toc}{\protect\setcounter{tocdepth}{2}} % Ab hier geht das iInhaltsverzeichnis wieder bis Tiefe subsection
