--- a/thesis/beweise/bew-nebenresultate.tex
+++ b/thesis/beweise/bew-nebenresultate.tex
@@ -1,4 +1,4 @@
-\section{Zu Kapitel \ref{chap:nebenresultate}}
+\section{Zu Kapitel \ref{chap:nebenresultate} (Nebenresultate)}
 
 \subsection{Zu Abschnitt \ref{sec:echter-rand}}
 
