--- a/thesis/thesis.tex
+++ b/thesis/thesis.tex
@@ -107,6 +107,7 @@
 \include{beweise/bew-topologie-grundlagen}
 \include{beweise/bew-topologie-erweiterung}
 \include{beweise/bew-bso-struktur}
+\include{beweise/bew-nebenresultate}
 
 \cleardoublepage\include{FrontBackmatter/Bibliography}
 
