--- a/thesis/FrontBackmatter/Contents.tex
+++ b/thesis/FrontBackmatter/Contents.tex
@@ -15,7 +15,9 @@
 %*******************************************************
 % List of Figures and of the Tables
 %*******************************************************
-\clearpage
+%\clearpage
+\vspace{8ex}
+
 % \pagestyle{empty} % Uncomment this line if your lists should not have any headlines with section name and page number
 \begingroup
     \let\clearpage\relax
