--- a/thesis/FrontBackmatter/Acknowledgments.tex
+++ b/thesis/FrontBackmatter/Acknowledgments.tex
@@ -19,11 +19,12 @@
 \chapter*{Danksagung}
 %Hier ist Platz für optionale Danksagungen.
 
-Ich danke meinem Betreuer Dr. Frank Loebe, der sich stets so viel Zeit für meine Fragen und interessante Diskussionen genommen hat.
+Ich danke Dr. Frank Loebe, der sich stets so viel Zeit für meine Fragen und interessante Diskussionen genommen hat, für die erstklassige Betreuung und Unterstützung, die ich von ihm über den ganzen Zeitraum der Arbeit hindurch erhalten habe.
 
-Besonderer Dank geht an meine Freunde Luise Ludewig und Markus Körber, dir mir mit der Digitalisierung und Bearbeitung der vielen Abbildungen geholfen haben. Ohne sie wäre diese Arbeit nicht das, was sie ist.
+Besonderen Dank geht an meine Freunde Luise Ludewig und Markus Körber, die mir bei der Digitalisierung und Bearbeitung der vielen Abbildungen, durch Korrekturlesen, durch Last-Minute-Latex-Support und nicht zuletzt durch ihre Freundschaft, über die teils anstrengenden letzten Wochen geholfen haben. 
+Ohne sie wäre diese Arbeit nicht das, was sie ist.
 
-Außerdem möchte ich meinen Eltern Gabriele und Peter Hanle danken, die mich über viele Jahre hinweg vorbehaltlos unterstützt haben.
+Nicht zuletzt möchte ich meinen Eltern danken, die mich über so viele Jahre hinweg vorbehaltlos unterstützt haben.
 
 
 \endgroup
