final final version

--- a/thesis/classicthesis-config.tex
+++ b/thesis/classicthesis-config.tex
@@ -306,8 +306,8 @@
 % ****************************************************************************************************
 
 % ****** Custom
-%\usepackage[disable]{todonotes}
-\usepackage{todonotes}
+\usepackage[disable]{todonotes}
+%\usepackage{todonotes}
 \usepackage{cleveref}
 
 %***************************************************************************
