--- a/thesis/FrontBackmatter/Titlepage.tex
+++ b/thesis/FrontBackmatter/Titlepage.tex
@@ -57,7 +57,7 @@
         
         Universität Leipzig\\
         Fakultät für Mathematik und Informatik\\
-        (Institut für Informatik)\\
+        Institut für Informatik\\
         
         \vfill
 
