--- a/thesis/FrontBackmatter/Acknowledgments.tex
+++ b/thesis/FrontBackmatter/Acknowledgments.tex
@@ -21,7 +21,7 @@
 
 Ich danke Dr. Frank Loebe, der sich stets so viel Zeit für meine Fragen und interessante Diskussionen genommen hat, für die erstklassige Betreuung und Unterstützung, die ich von ihm über den ganzen Zeitraum der Arbeit hindurch erhalten habe.
 
-Besonderen Dank geht an meine Freunde Luise Ludewig und Markus Körber, die mir bei der Digitalisierung und Bearbeitung der vielen Abbildungen, durch Korrekturlesen, durch Last-Minute-Latex-Support und nicht zuletzt durch ihre Freundschaft, über die teils anstrengenden letzten Wochen geholfen haben. 
+Besonderer Dank geht an meine Freunde Luise Ludewig und Markus Körber, die mir bei der Digitalisierung und Bearbeitung der vielen Abbildungen, durch Korrekturlesen, durch Last-Minute-Latex-Support und nicht zuletzt durch ihre Freundschaft, über die teils anstrengenden letzten Wochen geholfen haben. 
 Ohne sie wäre diese Arbeit nicht das, was sie ist.
 
 Nicht zuletzt möchte ich meinen Eltern danken, die mich über so viele Jahre hinweg vorbehaltlos unterstützt haben.
