--- a/model/classicthesis-config.tex
+++ b/model/classicthesis-config.tex
@@ -741,5 +741,12 @@
 \newcommand{\udset}{\ensuremath{\{\uparrow, \downarrow\}}}
 \renewcommand{\emph}{\spacedlowsmallcaps}
 %\renewcommand{\emph}{\textbf}
-\newcommand{\vor}{\ensuremath{\leftslice}}
+%\newcommand{\vor}{\ensuremath{\leftslice}}
+\newcommand{\vor}{\ensuremath{\prec}}
+\newcommand{\nvor}{\ensuremath{\nprec}}
+
+\newcommand{\B}{\ensuremath{\mathcal{B}}}
+\newcommand{\can}{\ensuremath{\text{can}}}
+\newcommand{\lb}{\ensuremath{\text{lb}}}
+\newcommand{\base}{\ensuremath{\text{base}}}
 
