--- a/model/thesis.tex
+++ b/model/thesis.tex
@@ -49,8 +49,8 @@
 % Frontmatter
 %*******************************************************
 
-\include{FrontBackmatter/Titlepage}
-\include{FrontBackmatter/Titleback}
+%\include{FrontBackmatter/Titlepage}
+%\include{FrontBackmatter/Titleback}
 %\cleardoublepage\include{FrontBackmatter/Dedication}
 %\cleardoublepage\include{FrontBackmatter/Foreword}
 %\cleardoublepage\include{FrontBackmatter/Abstract}
@@ -90,6 +90,7 @@
 %\include{Chapters/diskussion}
 
 \include{Chapters/new-ideas}
+%\include{Chapters/new-ideas-2}
 
 
 % ********************************************************************
@@ -99,7 +100,7 @@
 %\appendix
 %\cleardoublepage
 
-\part{Anhang}
+%\part{Anhang}
 
 %\include{Chapters/nebenresultate}
 
