--- a/model/classicthesis-config.tex
+++ b/model/classicthesis-config.tex
@@ -306,8 +306,8 @@
 % ****************************************************************************************************
 
 % ****** Custom
-\usepackage[disable]{todonotes}
-%\usepackage{todonotes}
+%\usepackage[disable]{todonotes}
+\usepackage{todonotes}
 \usepackage{cleveref}
 
 %***************************************************************************
@@ -593,7 +593,8 @@
 
 \newcommand{\theoryBSO}{\ensuremath{\mathcal{BS}^{\mathcal{O}}}}
 %\newcommand{\strukt}{\ensuremath{{\mathcal{R}\text{-Struktur}}}}
-\newcommand{\strukt}{$\mathcal{R}$-Struktur\xspace}
+% \newcommand{\strukt}{$\mathcal{R}$-Struktur\xspace}
+\newcommand{\strukt}{Blockstruktur\xspace}
 \newcommand{\univ}{\ensuremath{\mathcal{U}}}
 \newcommand{\R}{\ensuremath{\mathbb{R}}}
 \newcommand{\N}{\ensuremath{\mathbb{N}}}
@@ -748,5 +749,9 @@
 \newcommand{\B}{\ensuremath{\mathcal{B}}}
 \newcommand{\can}{\ensuremath{\text{can}}}
 \newcommand{\lb}{\ensuremath{\text{lb}}}
+\newcommand{\ub}{\ensuremath{\text{ub}}}
 \newcommand{\base}{\ensuremath{\text{base}}}
+\newcommand{\eukl}{\ensuremath{\text{eukl}}}
+\newcommand{\intv}{\ensuremath{\text{intv}}}
+\newcommand{\bnd}{\ensuremath{\GSymbolFont{bnd}}}
 
