--- a/model/thesis.tex
+++ b/model/thesis.tex
@@ -89,7 +89,7 @@
 
 %\include{Chapters/diskussion}
 
-\include{Chapters/new-ideas}
+\include{Chapters/new-ideas-3}
 %\include{Chapters/new-ideas-2}
 
 
