--- a/model/classicthesis-config.tex
+++ b/model/classicthesis-config.tex
@@ -752,6 +752,6 @@
 \newcommand{\ub}{\ensuremath{\text{ub}}}
 \newcommand{\base}{\ensuremath{\text{base}}}
 \newcommand{\eukl}{\ensuremath{\text{eukl}}}
-\newcommand{\intv}{\ensuremath{\text{intv}}}
+\newcommand{\core}{\ensuremath{\text{core}}}
 \newcommand{\bnd}{\ensuremath{\GSymbolFont{bnd}}}
 
