--- a/model/thesis.tex
+++ b/model/thesis.tex
@@ -69,28 +69,11 @@
 % use \cleardoublepage here to avoid problems with pdfbookmark
 \cleardoublepage
 
-%\include{Chapters/einleitung}
 
-%\part{Die ontologische Seite}
-
-%\include{Chapters/bs}
-
-%\include{Chapters/bso-grundideen}
-
-%\part{Die topologische Seite}
-
-%\include{Chapters/topologie-grundlagen}
-
-%\include{Chapters/topologie-erweiterung}
-
-%\part{Zusammenführung}
-
-%\include{Chapters/bso-struktur}
-
-%\include{Chapters/diskussion}
-
-\include{Chapters/new-ideas-3}
-%\include{Chapters/new-ideas-2}
+\include{Chapters/theorems}
+\include{Chapters/basic-definitions}
+\include{Chapters/struktur}
+\include{Chapters/defined}
 
 
 % ********************************************************************
