--- a/model/thesis.tex
+++ b/model/thesis.tex
@@ -74,6 +74,7 @@
 \include{Chapters/basic-definitions}
 \include{Chapters/struktur}
 \include{Chapters/defined}
+\include{Chapters/axioms}
 
 
 % ********************************************************************
