--- a/model/thesis.tex
+++ b/model/thesis.tex
@@ -69,7 +69,9 @@
 % use \cleardoublepage here to avoid problems with pdfbookmark
 \cleardoublepage
 
+% \include{Chapters/ideas-4}
 
+\include{Chapters/modified-theory}
 \include{Chapters/theorems}
 \include{Chapters/basic-definitions}
 \include{Chapters/struktur}
